--- a/demos/webpack-app/public/dam-control-panel.html
+++ b/demos/webpack-app/public/dam-control-panel.html
@@ -16,7 +16,7 @@
 	<body>
 		<div id="control">
 			<div id="level-of-water-control">
-				<h1>💧 Dam Control Panel &mdash; <a href="https://nocode-js.com/" target="_blank">Visflo</a> Example</h1>
+				<h1>💧 Dam Control Panel &mdash; <a href="https://github.com/nocode-js/visflo" target="_blank">Visflo</a> Example</h1>
 				<div id="panel">
 					Level of Water
 					<input type="range" id="waterLevel" min="40" max="100" value="80" />
